fix(report): fix report not showing failure notice when failed to make a ajax req

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -61,7 +61,7 @@
 }
 
 .theme--dark .bkop-medium {
-    background: rgba(40, 40, 40, .9) !important;
+    background: rgba(30, 30, 30, .9) !important;
 }
 
 .cursor-pointer {
